# serializer version: 1
# name: test_frame_when_compact_layout_on_short_console_does_show_single_row
  '⠋ sampling                                            0%  00:00/--:--'
# ---
# name: test_frame_when_compare_command_does_show_header_with_multiple_labels
  '''
  compare main, candidate · 5 samples
  ⠋ preparing · main 0:00:00
  '''
# ---
# name: test_frame_when_measure_command_does_show_header_with_command_and_labels
  '''
  measure ecstatic-ts · 5 samples
  ⠋ preparing 0:00:00
  '''
# ---
# name: test_frame_when_mid_run_with_computed_eta_does_show_clock_total
  '⠋ sampling ━━━━━━━━━━━━━                            1/3 00:52/01:12'
# ---
# name: test_frame_when_multi_target_compare_does_name_running_target
  '⠋ sampling · candidate                                          0/10 00:00/--:--'
# ---
# name: test_frame_when_prepare_done_and_first_pass_running_does_show_pending_eta
  '⠋ sampling                                          0/3 00:00/--:--'
# ---
# name: test_frame_when_prepare_running_does_show_spinner_and_label
  '⠋ preparing 0:00:00'
# ---
# name: test_plain_renderer_when_pass_finished_does_print_exact_timestamped_line
  '[00:00:20] pass 1/3 · bench (20s)'
# ---
# name: test_stop_when_compare_done_does_print_summary
  'compared in 45s'
# ---
# name: test_stop_when_measure_done_does_print_summary
  'measured in 23s'
# ---
